# tessera-sdk

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-node.yml  publish-python.yml
examples/: anthropic-wrap.py  direct-provider.py  langchain-wrap.py  openai-wrap.py  openai-wrap.ts
node/: README.md  package-lock.json  package.json  tsconfig.json
node/src/: index.ts
node/test/: index.test.ts
python/: README.md  pyproject.toml
python/tessera/: __init__.py  core.py
python/tests/: test_core.py
