[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera-llm-proxy"
version = "0.1.2"
description = "Tessera SDK — drop-in LLM cost optimization. One line patches OpenAI, Anthropic, Mistral, Groq, Cohere clients to route through Tessera's auto-route + auto-cache + auto-compress + auto-batch proxy. Free tier: 60M tokens/mo. Production: 20% of measured savings, $0 if none."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Tessera (Fintechagency OÜ)", email = "contact@tesseraai.io" }
]
keywords = [
  "tessera",
  "llm",
  "openai",
  "anthropic",
  "mistral",
  "groq",
  "cohere",
  "cost-optimization",
  "ai-cost",
  "llm-cost",
  "ai-proxy",
  "llm-proxy",
  "observability",
  "gpt-4o",
  "claude",
  "gemini",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-mock>=3.0",
]
# `dev` mirrors `test` — keeps `pip install -e ".[dev]"` (the convention
# CONTRIBUTING.md tells contributors to run) working without forcing
# them to remember the alternate `[test]` name.
dev = [
  "pytest>=7.0",
  "pytest-mock>=3.0",
]

[project.urls]
Homepage = "https://tesseraai.io"
Documentation = "https://tesseraai.io/dev"
Repository = "https://github.com/tessera-llm/tessera-sdk"
Issues = "https://github.com/tessera-llm/tessera-sdk/issues"
Changelog = "https://github.com/tessera-llm/tessera-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["tessera"]
# Ship the PEP 561 marker so downstream `mypy --strict` recognises the
# package as typed (without it, mypy emits "Skipping analyzing 'tessera'").
include = ["tessera/py.typed"]
